--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       - "8000:8000"
     stdin_open: true
     tty: true
-    command: python3 hello_world/manage.py runserver 0.0.0.0:8000
+    command: python3 manage.py runserver 0.0.0.0:8000
   frontend:
     build: ./frontend
     volumes:
