Move CRA into frontend directory

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -4,18 +4,13 @@ FROM node:8
 WORKDIR /app/
 
 # Install dependencies
-COPY hello-world/package.json hello-world/yarn.lock /app/
+COPY package.json yarn.lock /app/
 
 RUN npm install
 
 # Add rest of the client code
 COPY . /app/
-# We install node_modules in /app/, then move it to avoid overwriting it
-# with the COPY above
-RUN mv /app/node_modules /app/hello-world/
 
 EXPOSE 3000
-
-WORKDIR /app/hello-world/
 
 CMD npm start
