--- a/part-1-dev-env/backend/Dockerfile
+++ b/part-1-dev-env/backend/Dockerfile
@@ -16,4 +16,4 @@ EXPOSE 8000
 
 # Be sure to use 0.0.0.0 for the host within the Docker container,
 # otherwise the browser won't be able to find it
-CMD python3 hello_world/manage.py runserver 0.0.0.0:8000
+CMD python3 manage.py runserver 0.0.0.0:8000
