--- a/part-1-dev-env/docker-compose.yml
+++ b/part-1-dev-env/docker-compose.yml
@@ -8,18 +8,17 @@ services:
       - "8000:8000"
     stdin_open: true
     tty: true
-    command: python3 hello_world/manage.py runserver 0.0.0.0:8000
+    command: python3 manage.py runserver 0.0.0.0:8000
   frontend:
     build: ./frontend
     volumes:
       - ./frontend:/app
       # One-way volume to use node_modules from inside image
-      - /app/hello-world/node_modules
+      - /app/node_modules
     ports:
       - "3000:3000"
     environment:
       - NODE_ENV=development
     depends_on:
       - backend
-    working_dir: /app/hello-world/
     command: npm start
